diesel_compile_tests/tests/fail/cannot_pass_aggregate_to_where.stderr
error[E0277]: mixing aggregate and not aggregate expressions is not allowed in SQL
   --> tests/fail/cannot_pass_aggregate_to_where.rs:15:24
    |
 LL |     let source = users.filter(count(id).gt(3));
    |                        ^^^^^^ unsatisfied trait bound
    |
    = help: the trait `MixedAggregates<diesel::expression::is_aggregate::No>` is not implemented for `diesel::expression::is_aggregate::Yes`
    = note: you tried to combine expressions that aggregate over a certain column with expressions that don't aggregate over that column
    = note: try to either use aggregate functions like `min`/`max`/… for this column or add the column to your `GROUP BY` clause
    = note: also there are clauses like `WHERE` or `RETURNING` that does not accept aggregate expressions at all
help: the following other types implement trait `MixedAggregates<Other>`
   --> DIESEL/diesel/diesel/src/expression/mod.rs
    |
LL |     impl MixedAggregates<Yes> for Yes {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::Yes` implements `MixedAggregates<diesel::expression::is_aggregate::Yes>`
...
LL |     impl MixedAggregates<Never> for Yes {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::Yes` implements `MixedAggregates<diesel::expression::is_aggregate::Never>`
    = note: required for `Grouped<Gt<count<Integer, id>, Bound<..., i64>>>` to implement `NonAggregate`
    = note: required for `SelectStatement<FromClause<users::table>>` to implement `FilterDsl<Grouped<Gt<count<Integer, id>, ...>>>`
 
    For more information about this error, try `rustc --explain E0277`.
